Refactor file storage structure and access logic
Reorganized file storage paths and updated related logic for clarity and modularity. Unified file retrieval by introducing a streamlined path-based access method, replacing specific access methods tied to user roles or permissions.